tests/neg/syntax_expected_expression_hint.baa
// EXPECT: متوقع تعبير
// EXPECT: ابدأ التعبير بعدد
صحيح الرئيسية() {
    صحيح س = .
    إرجع 0.
}
